--- a/Handwritten Character Recognition .ipynb
+++ b/Handwritten Character Recognition .ipynb
@@ -52,7 +52,9 @@
             "Epoch 3/5\n",
             "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m83s\u001b[0m 50ms/step - accuracy: 0.9874 - loss: 0.0391\n",
             "Epoch 4/5\n",
-            "\u001b[1m765/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━\u001b[0m \u001b[1m7s\u001b[0m 46ms/step - accuracy: 0.9901 - loss: 0.0316"
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 47ms/step - accuracy: 0.9901 - loss: 0.0316\n",
+            "Epoch 5/5\n",
+            "\u001b[1m574/938\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m16s\u001b[0m 46ms/step - accuracy: 0.9931 - loss: 0.0224"
           ]
         }
       ],
